# Email-Triage-OpenEnv

./: README.md  environment.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  main.py
tasks/: .gitignore  __init__.py  easy.py  hard.py  medium.py
