[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email triage system for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "python-dotenv"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# FIX: Tell the build system where your code is
[tool.hatch.build.targets.wheel]
packages = ["server"]